# selenium-manager

./: README.md  configs.json  pyproject.toml  requirements.txt  run.py
selenium_manager/: main.py  selenium_manager.py
