[tool.poetry]
name = "selenium-manager"
version = "0.1.0"
description = ""
authors = ["Luis Carlos <luiscarlosfirminopinheiro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^3.141.0"
webdriver-manager = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.800"
black = "^20.8b1"
pylint = "^2.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "selenium_manager.main:main"